<resources>
    <string name="app_name">MVVM Sample APP</string>
    <string name="mvvm">MVVM</string>
    <string name="architect_your_app_with">architect your app with</string>
    <string name="my_email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_here">Don\'t have an account? \n Sign Up Here</string>
    <string name="sign_in_here">Already have an account? \n Sign In Here</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">Username</string>
    <string name="content_description">image</string>
    <string name="sign_up">Sign Up</string>
    <string name="quotes">Quotes</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome</string>
</resources>
